--- a/SlideshowApp/Base.lproj/Main.storyboard
+++ b/SlideshowApp/Base.lproj/Main.storyboard
@@ -42,20 +42,16 @@
                                     <action selector="forwardButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gtz-K0-gGo"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vtd-zu-yiY">
-                                <rect key="frame" x="73" y="82" width="241" height="215"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="picture1" translatesAutoresizingMaskIntoConstraints="NO" id="kac-eh-IVT">
+                                <rect key="frame" x="0.0" y="78" width="375" height="224"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="picture1"/>
-                                <connections>
-                                    <action selector="SlideShowPicture:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fau-tf-3ge"/>
-                                </connections>
-                            </button>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="SlideShowImage" destination="Vtd-zu-yiY" id="j2f-Ik-yKn"/>
+                        <outlet property="slideShowImage" destination="kac-eh-IVT" id="wfV-CR-12n"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
